[gd_scene format=3 uid="uid://bhf4jh67udym5"]

[ext_resource type="Script" uid="uid://br6clhy0wcu1n" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Theme" uid="uid://vu31b71jmlkp" path="res://theme.tres" id="2_1bvp3"]
[ext_resource type="Texture2D" uid="uid://y8q6b4aeus2d" path="res://Scene1/Scene1F1.png" id="2_d13ii"]
[ext_resource type="Texture2D" uid="uid://chv2fa8y7e3re" path="res://TextBox1.png" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://df32w7ajs3i3a" path="res://Scene2/Scene2F1.png" id="2_ycdy4"]
[ext_resource type="FontFile" uid="uid://cu2bydgc5ct0d" path="res://Pangolin-Regular.ttf" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://d4falbt2tisvp" path="res://Scene1/Scene1F2.png" id="3_1u8w0"]
[ext_resource type="Texture2D" uid="uid://bkibyko35lh0p" path="res://Scene2/Scene2Wife1.png" id="3_w48qg"]
[ext_resource type="Texture2D" uid="uid://hpe74joammfj" path="res://Scene1/Scene1MouthBlushing1.png" id="4_0rl1p"]
[ext_resource type="Texture2D" uid="uid://dtnmb27rggka7" path="res://Scene2/Scene2Wife2.png" id="4_vivmo"]
[ext_resource type="Texture2D" uid="uid://baeoyhuhdwgcl" path="res://Scene2/Scene2WifeMad1.png" id="5_2cqfq"]
[ext_resource type="Shader" path="res://wobble.gdshader" id="5_7mycd"]
[ext_resource type="Texture2D" uid="uid://dwqftu4ohb2su" path="res://SplitLine.png" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://bxeit0yf0wh6b" path="res://Scene1/Scene1MouthBlushing2.png" id="5_ok6jj"]
[ext_resource type="Texture2D" uid="uid://bhv0snph6hea" path="res://Scene1/Scene1Mouth1.png" id="6_facbu"]
[ext_resource type="Texture2D" uid="uid://dxwaywyh027g2" path="res://Scene2/Scene2WifeMad2.png" id="6_yaehf"]
[ext_resource type="Texture2D" uid="uid://bj6ty88lre0y3" path="res://Scene2/Scene2Slam1.png" id="7_074og"]
[ext_resource type="Texture2D" uid="uid://bgf5hep6fmjvr" path="res://Scene1/Scene1Mouth2.png" id="7_b1qrp"]
[ext_resource type="Texture2D" uid="uid://c8lqi5i387n2f" path="res://Scene1/Scene1Bag1.png" id="7_yaehf"]
[ext_resource type="Texture2D" uid="uid://drg76500kcigi" path="res://Scene1/Scene1Bag2.png" id="8_074og"]
[ext_resource type="Texture2D" uid="uid://bw6loyhfobhdx" path="res://Scene2/Scene2Slam2.png" id="8_cegan"]
[ext_resource type="Texture2D" uid="uid://bg65o5e4dyqtk" path="res://Scene1/Scene1MouthHearts1.png" id="8_come4"]
[ext_resource type="Texture2D" uid="uid://fdc0h0l684gm" path="res://Scene1/Scene1Bag3.png" id="9_cegan"]
[ext_resource type="Texture2D" uid="uid://cvvf6k3wkpe7q" path="res://Scene1/Scene1MouthHearts2.png" id="9_h8e4i"]
[ext_resource type="Texture2D" uid="uid://cy5exb3sedq7n" path="res://Scene1/Scene1MouthTaking.png" id="10_4lmeg"]
[ext_resource type="Texture2D" uid="uid://bo2ht6xeixo5r" path="res://Scene1/Scene1Bag4.png" id="10_82xsv"]
[ext_resource type="Texture2D" uid="uid://btx4lsjun42ok" path="res://Scene1/Scene1Bag5.png" id="11_getpj"]
[ext_resource type="Texture2D" uid="uid://big1ix814wfvb" path="res://Scene1/Scene1Bag6.png" id="12_ryguw"]
[ext_resource type="Texture2D" uid="uid://dnndpsnefsbxy" path="res://Scene1/Scene1Bag7.png" id="13_d13ii"]
[ext_resource type="Texture2D" uid="uid://1eg6n001ixj2" path="res://Scene1/Scene1bag8.png" id="14_1u8w0"]
[ext_resource type="Texture2D" uid="uid://b3f7w1kyu6nor" path="res://Scene1/Scene1Bag9.png" id="15_0odxb"]
[ext_resource type="Texture2D" uid="uid://b5meiuoruwy8j" path="res://Scene1/Scene1Bag10.png" id="16_lswn8"]
[ext_resource type="Texture2D" uid="uid://cd5cl5usuq8ta" path="res://Scene1/Scene1Bag11.png" id="17_a6jrf"]
[ext_resource type="Texture2D" uid="uid://2svyvp5g0xb1" path="res://Scene1/Scene1Guy1.png" id="22_0cp0l"]
[ext_resource type="Texture2D" uid="uid://cunl2eor7ewvy" path="res://Scene1/Scene1Guy2.png" id="23_d2t1y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0odxb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d13ii")
}, {
"duration": 1.0,
"texture": ExtResource("3_1u8w0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_gngh3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_0rl1p")
}, {
"duration": 1.0,
"texture": ExtResource("5_ok6jj")
}],
"loop": true,
"name": &"blushing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_facbu")
}, {
"duration": 1.0,
"texture": ExtResource("7_b1qrp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_come4")
}, {
"duration": 1.0,
"texture": ExtResource("9_h8e4i")
}],
"loop": true,
"name": &"hearts",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_4lmeg")
}, {
"duration": 1.0,
"texture": ExtResource("7_b1qrp")
}],
"loop": true,
"name": &"talking",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xuqvo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_074og")
}, {
"duration": 1.0,
"texture": ExtResource("9_cegan")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_82xsv")
}, {
"duration": 1.0,
"texture": ExtResource("11_getpj")
}, {
"duration": 1.0,
"texture": ExtResource("11_getpj")
}, {
"duration": 1.0,
"texture": ExtResource("11_getpj")
}, {
"duration": 1.0,
"texture": ExtResource("11_getpj")
}, {
"duration": 1.0,
"texture": ExtResource("11_getpj")
}, {
"duration": 1.0,
"texture": ExtResource("12_ryguw")
}, {
"duration": 1.0,
"texture": ExtResource("12_ryguw")
}, {
"duration": 1.0,
"texture": ExtResource("13_d13ii")
}, {
"duration": 1.0,
"texture": ExtResource("14_1u8w0")
}, {
"duration": 1.0,
"texture": ExtResource("14_1u8w0")
}, {
"duration": 1.0,
"texture": ExtResource("15_0odxb")
}, {
"duration": 1.0,
"texture": ExtResource("16_lswn8")
}, {
"duration": 1.0,
"texture": ExtResource("16_lswn8")
}, {
"duration": 1.0,
"texture": ExtResource("17_a6jrf")
}],
"loop": false,
"name": &"filled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_yaehf")
}],
"loop": true,
"name": &"start",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_0n3wm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_0cp0l")
}, {
"duration": 1.0,
"texture": ExtResource("23_d2t1y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_82xsv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_w48qg")
}, {
"duration": 1.0,
"texture": ExtResource("4_vivmo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_2cqfq")
}, {
"duration": 1.0,
"texture": ExtResource("6_yaehf")
}],
"loop": true,
"name": &"mad",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_getpj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("7_074og")
}, {
"duration": 1.0,
"texture": ExtResource("8_cegan")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qnost"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("left/guy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("left/bag:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"start"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("left/bag:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("left/bag:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-53, -78)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("left/bag:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("left/cashierMouth:animation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_wnkbs"]
resource_name = "Scene1"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("left/guy:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.0333333, 4.233333, 4.4333334, 4.613333, 4.7999997, 5, 5.1666665),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-82, -121), Vector2(-45, -160), Vector2(37, -94), Vector2(109, -125), Vector2(226, -68), Vector2(376, -126), Vector2(480, -38)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("left/bag:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"filled"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("left/bag:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.49704766),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("left/bag")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"filled", 1.0, false],
"method": &"play"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("left/bag:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(4.033334, 4.2333336, 4.433334, 4.6133337, 4.8, 5.0000005, 5.166667, 5.4666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-82, -121), Vector2(-45, -160), Vector2(37, -94), Vector2(109, -125), Vector2(226, -68), Vector2(376, -126), Vector2(480, -38), Vector2(784, -120)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("left/bag:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.4781542, 3.8411722),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 14]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("left/cashierMouth:animation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 5.7697277),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"default", &"talking"]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("left/cashierMouth")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(5.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"talking", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f6a44"]
_data = {
&"RESET": SubResource("Animation_qnost"),
&"Scene1": SubResource("Animation_wnkbs")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lquwl"]
texture = ExtResource("2_h2yge")
region_rect = Rect2(0, 0, 700, 230)

[sub_resource type="Theme" id="Theme_7mycd"]
Panel/styles/panel = SubResource("StyleBoxTexture_lquwl")
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
RichTextLabel/font_sizes/normal_font_size = 60
RichTextLabel/fonts/normal_font = ExtResource("3_1bvp3")

[sub_resource type="RichTextEffect" id="RichTextEffect_h2yge"]

[sub_resource type="Animation" id="Animation_1bvp3"]
length = 0.001

[sub_resource type="Animation" id="Animation_lquwl"]
resource_name = "textBox"
length = 0.6
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"addTextBoxStyle"
}, {
"args": [],
"method": &"removeTextBoxStyle"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mycd"]
_data = {
&"RESET": SubResource("Animation_1bvp3"),
&"textBox": SubResource("Animation_lquwl")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_272bh"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_5vw27"]
noise = SubResource("FastNoiseLite_272bh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kek77"]
shader = ExtResource("5_7mycd")
shader_parameter/scale = Vector2(1, 1)
shader_parameter/strength = 0.1
shader_parameter/fps = 6.0
shader_parameter/noise = SubResource("NoiseTexture2D_5vw27")

[node name="main" type="Node2D" unique_id=349520352]
script = ExtResource("1_h2yge")

[node name="scene1" type="Node2D" parent="." unique_id=1810238575]

[node name="left" type="Node2D" parent="scene1" unique_id=1650246897]
position = Vector2(480, 540)

[node name="background" type="AnimatedSprite2D" parent="scene1/left" unique_id=2067141420]
sprite_frames = SubResource("SpriteFrames_0odxb")
autoplay = "default"
frame_progress = 0.9607957

[node name="cashierMouth" type="AnimatedSprite2D" parent="scene1/left" unique_id=1376319181]
sprite_frames = SubResource("SpriteFrames_gngh3")

[node name="bag" type="AnimatedSprite2D" parent="scene1/left" unique_id=2013871319]
visible = false
position = Vector2(-53, -78)
sprite_frames = SubResource("SpriteFrames_xuqvo")
animation = &"start"
autoplay = "start"

[node name="guy" type="AnimatedSprite2D" parent="scene1/left" unique_id=1613617774]
sprite_frames = SubResource("SpriteFrames_0n3wm")
frame_progress = 0.5007616

[node name="right" type="Node2D" parent="scene1" unique_id=801523329]
position = Vector2(1440, 540)

[node name="background" type="Sprite2D" parent="scene1/right" unique_id=1467185339]
texture = ExtResource("2_ycdy4")

[node name="wife" type="AnimatedSprite2D" parent="scene1/right" unique_id=1697663385]
sprite_frames = SubResource("SpriteFrames_82xsv")
animation = &"mad"
frame_progress = 0.9954887

[node name="door" type="AnimatedSprite2D" parent="scene1/right" unique_id=831488751]
position = Vector2(-8, 0)
sprite_frames = SubResource("SpriteFrames_getpj")
frame_progress = 0.60988045

[node name="AnimationPlayer" type="AnimationPlayer" parent="scene1" unique_id=1918323572]
libraries/ = SubResource("AnimationLibrary_f6a44")
autoplay = &"Scene1"

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=152399280]

[node name="textBoxes" type="HSplitContainer" parent="CanvasLayer" unique_id=687967992]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 737.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
split_offsets = PackedInt32Array(960)
dragging_enabled = false
split_offset = 960

[node name="textBox1" type="MarginContainer" parent="CanvasLayer/textBoxes" unique_id=1864588424]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="CanvasLayer/textBoxes/textBox1" unique_id=724133588]
layout_mode = 2
theme = ExtResource("2_1bvp3")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/textBoxes/textBox1/Panel" unique_id=591292850]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Subtitles" type="RichTextLabel" parent="CanvasLayer/textBoxes/textBox1/Panel/MarginContainer" unique_id=1297471734]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_7mycd")
bbcode_enabled = true
text = "[shake  rate=4 level=8]Yo[/shake]"
scroll_active = false
custom_effects = [SubResource("RichTextEffect_h2yge")]

[node name="textBox2" type="MarginContainer" parent="CanvasLayer/textBoxes" unique_id=1573133163]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="CanvasLayer/textBoxes/textBox2" unique_id=1622699367]
layout_mode = 2
theme = ExtResource("2_1bvp3")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/textBoxes/textBox2/Panel" unique_id=1538794358]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Subtitles" type="RichTextLabel" parent="CanvasLayer/textBoxes/textBox2/Panel/MarginContainer" unique_id=1672837581]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_7mycd")
bbcode_enabled = true
text = "[shake  rate=4 level=8]Yo[/shake]"

[node name="textBoxEffect" type="AnimationPlayer" parent="CanvasLayer/textBoxes" unique_id=851076211]
libraries/ = SubResource("AnimationLibrary_7mycd")
autoplay = &"textBox"

[node name="Line" type="Sprite2D" parent="." unique_id=1436307979]
material = SubResource("ShaderMaterial_kek77")
position = Vector2(966, 539)
texture = ExtResource("5_lquwl")
